Fix margins on hamburger menu on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -778,6 +778,23 @@ a:visited {
     justify-content: center;
     align-items: center;
   }
+
+  .nav-links {
+    gap: 0;
+    margin-left: 0;
+  }
+
+  .nav-links li {
+    margin-left: 0;
+  }
+
+  .logo {
+    margin-right: 0;
+  }
+
+  nav ul :nth-child(2) {
+    gap: 0em;
+  }
 }
 
 /* HAMBURGER TEST */
